[tool.poetry]
name = "program-synthesis-benchmarks"
version = "0.0.0"
description = "Downloading and reading inductive program synthesis benchmark datasets fron PSB1 and PSB2."
authors = ["erp12 <eddie.pantridge@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "program_synthesis_benchmarks" }]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0"
pyarrow = "^14.0"  # Required for parquet reading/writing.
boto3 = "^1.26"
requests = "^2.31"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1"
mkdocs = "^1.5"
mkdocstrings = { extras = ["python"], version = "^0.24" }
mkdocs-material = "^9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
